Reverting back the URL functions.